--- a/hugo.toml
+++ b/hugo.toml
@@ -1,14 +1,17 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://enexam.github.io/maxence_blog/'
 languageCode = 'en-us'
 title = 'Maxence Beuselinck'
 theme = 'rusty-typewriter'
+
 [caches]
     [caches.images]
         dir = ':cacheDir/images'
+
 [rusty_typewriter]
  [params.rtwt]
   sidePane = true
   countPageItems = 7 
+
  [params.rtwt.home]
   showBio = true
   showAuthorImg = true
@@ -17,12 +20,15 @@ theme = 'rusty-typewriter'
   showRecent = true
   hideRecentWhenFeatured = true
   countRecent = 5
+
  [params.rtwt.side.home]
   sidePaneSticky = false 
   taxonomies = ['tags']
   countTaxonomy = 5
+
  [params.rtwt.side.list]
   sidePaneSticky = false
+
  [params.rtwt.side.single]
   sidePaneSticky = true 
   showDetails = true
